little fix messages overflow

--- a/src/components/chat/chatMessages/ChatMessages.css
+++ b/src/components/chat/chatMessages/ChatMessages.css
@@ -206,5 +206,25 @@
   }
 
 
+  @media only screen and (max-width:239px) and (min-width: 0px) {
+    .chat-bubble--right>.text-muted{
+        max-width: 100px ;
+    }
+  }
+
+  @media only screen and (max-width:339px) and (min-width:240px) {
+    .chat-bubble--right>.text-muted{
+        max-width: 150px ;
+    }
+  }
+
+  @media only screen and (max-width:460px) and (min-width: 340px) {
+    .chat-bubble--right>.text-muted{
+        max-width: 250px ;
+    }
+  }
+
+
+
 
 
